objects/ASI_CRM_Voucher_Detail__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Buy_every_9L__c</fullName>
        <label>Buy every 9L</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Incentive_Ratio__c</fullName>
        <label>Incentive Ratio</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Offtake_Volume__c</fullName>
        <label>Offtake Volume (9L)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Promotion_Detail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Promotion Detail</label>
        <referenceTo>ASI_HK_CRM_Promotion_Detail__c</referenceTo>
        <relationshipLabel>Voucher Details</relationshipLabel>
        <relationshipName>Voucher_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Promotion_Mechanic_Text__c</fullName>
        <formula>&quot;Buy every &quot; &amp; 
IF(ASI_CRM_Buy_every_9L__c &lt; 1, &quot;0&quot;, &quot;&quot;) &amp; Text(ASI_CRM_Buy_every_9L__c)
&amp; &quot; 9L Give 1 voucher&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Promotion Mechanic</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Promotion_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Promotion Plan</label>
        <referenceTo>ASI_CRM_Promotion_Plan__c</referenceTo>
        <relationshipLabel>Voucher Details</relationshipLabel>
        <relationshipName>Voucher_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Promotion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Promotion</label>
        <referenceTo>ASI_HK_CRM_Promotion__c</referenceTo>
        <relationshipLabel>Voucher Details</relationshipLabel>
        <relationshipName>Voucher_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SKU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Gift Voucher</label>
        <referenceTo>ASI_MFM_SKU_Code__c</referenceTo>
        <relationshipLabel>Voucher Details</relationshipLabel>
        <relationshipName>Voucher_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Total_Voucher_Value__c</fullName>
        <formula>ASI_CRM_Value_per_Voucher__c * ASI_CRM_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Voucher Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Taka Voucher</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Value_per_Voucher__c</fullName>
        <label>Value per Voucher</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Voucher_Header__c</fullName>
        <label>Voucher Header</label>
        <referenceTo>ASI_CRM_Voucher__c</referenceTo>
        <relationshipLabel>Voucher Details</relationshipLabel>
        <relationshipName>Voucher_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Voucher Detail</label>
    <nameField>
        <displayFormat>VD-{000000}</displayFormat>
        <label>Voucher Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Voucher Details</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_SG_Voucher_Detail</fullName>
        <active>true</active>
        <label>SG Voucher Detail</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>